@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.faros.on-air" name="Faros On-Air" version="1.3.1" provider-name="Twilight0">
+<addon id="plugin.video.faros.on-air" name="Faros On-Air" version="1.3.2" provider-name="Twilight0">
     <requires>
-        <import addon="xbmc.python" version="2.24.0"/>
+        <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="plugin.video.youtube" version="6.8.2"/>
-        <import addon="script.module.tulip" version="2.5.11"/>
+        <import addon="script.module.tulip" version="2.8.1"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
@@ -32,7 +32,10 @@
             <!--<datadir zip="true">https://raw.githubusercontent.com/Twilight0/repo.twilight0.libs/master/_zips/</datadir>-->
         <!--</dir>-->
     <!--</extension>-->
-    <news>31-08-2020 - [B]1.3.1[/B]
+    <news>29-11-2020 - [B]1.3.2[/B]
+- Update youtube api key
+
+31-08-2020 - [B]1.3.1[/B]
 - ReplaceHTML codes for listitems
 
 29-06-2020 - [B]1.3.0[/B]
