@@ -1,3 +1,6 @@
+29-11-2020 - [B]1.3.2[/B]
+- Update youtube api key
+
 31-08-2020 - [B]1.3.1[/B]
 - ReplaceHTML codes for listitems
 
